app/kubesphere/manifests/frontend/scanpro-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scanpro-frontend-ingress
  namespace: scanpro
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - scanpro.cc
      secretName: scanpro-tls
  rules:
    - host: scanpro.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scanpro-frontend
                port:
                  number: 80
